# quapsim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.ga.yml  docker-compose.rcs.yml  docker-compose.yml  evaluate_ga_results.ipynb  evaluate_gate_sim_results.ipynb  evaluate_rcs_results.ipynb  evaluate_results.ipynb  experiment_requirements.txt  extract_ga_results.py  extract_rcs_results.py  extract_results.py  main.py  pyproject.toml  requirements.txt  run_benchmarking.py  run_experiment.py  run_ga_experiment.py  run_gate_sim_experiment.py  run_rcs_experiment.py
benchmark/: __init__.py  requirements.txt  result_benchmark.py  run_benchmarking.py  time_benchmark.py  utils.py
evaluation/ga_case_study/: docker-compose.yml  evaluate_ga_results.ipynb  extract_results.py  run_ga_experiment.py
evaluation/gate_sim_experiments/: evaluate_gate_sim_results.ipynb  run_gate_sim_experiment.py  utils.py
evaluation/rcs_experiments/: docker-compose.yml  extract_rcs_results.py  run_rcs_experiment.py  utils.py
quapsim/: __init__.py
quapsim/cache/: __init__.py  interface.py  simple_dict_cache.py  utils.py
quapsim/circuit/: circuit.py  utils.py
quapsim/gates/: __init__.py  _matrices.py  controlled_gates.py  interface.py  single_qubit_gates.py  utils.py
quapsim/simulator/: __init__.py  params.py  simulator.py  utils.py
